# MoviemetaDb

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: python-package.yml
moviemetadb/: __init__.py  cli.py  storage.py  web.py
tests/: test_cli.py  test_web.py
tests/tmp/: movies.json
ui/: README.md  index.html  package.json
ui/src/: App.css  App.jsx
