[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moviemetadb"
version = "0.2.0"
description = "A simple movie metadata management library and CLI."
authors = [{name = "Stephan Hermann"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"

dependencies = [
  "sqlalchemy>=2.0"
]

[project.urls]
"Repository" = "https://github.com/Stephanhermann/MoviemetaDb"

[project.scripts]
moviemetadb = "moviemetadb.cli:main"

[project.optional-dependencies]
web = ["fastapi>=0.100", "uvicorn[standard]>=0.22"]
db = ["psycopg[binary]>=3.1"]
